--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.12",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
